# Friction_Breaker

./: .env.example  .gitignore  =4.1.1  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MECHANISM_CLASSIFIER_README.md  README.md  REVIEW_AND_RECOMMENDATIONS (1).md  SECURITY.md  app.py  friction_breaker_notes.md  leroysfrictionbreaker.tar.xz  mechanism_classifier_taxonomy.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  sync-ai-context.yml
Leroys_Tests/Discord_Run_1/: friction_breaker_report_20260417_131205.csv  friction_breaker_report_20260417_131205.docx  friction_breaker_report_20260417_131205.json  friction_breaker_report_20260417_131205.md  friction_breaker_report_20260417_131205.txt
Leroys_Tests/Discord_Run_2/: friction_breaker_report_20260417_191123.csv  friction_breaker_report_20260417_191123.docx  friction_breaker_report_20260417_191123.json  friction_breaker_report_20260417_191123.md  friction_breaker_report_20260417_191123.txt
Leroys_Tests/Discord_Run_3/: friction_breaker_report_20260427_003203.csv  friction_breaker_report_20260427_003203.docx  friction_breaker_report_20260427_003203.md  friction_breaker_report_20260427_003203.txt
Leroys_Tests/Discord_Test_1/: friction_breaker_report_20260417_020443.csv  friction_breaker_report_20260417_020443.json
Leroys_Tests/Patreon_Test_1/: friction_breaker_report_20260417_020443.md  friction_breaker_report_20260417_020443.txt
Leroys_Tests/Patreon_Tests/: friction_breaker_report_20260417_020443.docx
Leroys_Tests/README.md/Test_1/: README.md
Leroys_Tests/Run_1/: friction_breaker_report_20260411_165311.csv  friction_breaker_report_20260411_165311.docx  friction_breaker_report_20260411_165311.json  friction_breaker_report_20260411_165311.md  friction_breaker_report_20260411_165311.txt
Leroys_Tests/Test_2/: friction_breaker_report_20260409_072603.csv  friction_breaker_report_20260409_072603.docx  friction_breaker_report_20260409_072603.json  friction_breaker_report_20260409_072603.md  friction_breaker_report_20260409_072603.txt
_AI_CONTEXT_INDEX/: README.md
templates/: index.html
tests/: test_app.py
